Assigning empty object to Q_PROPERTY(QVariantMap)

Correct the evaluation of an empty javascript object during assignment
to a QVariantMap property.

Task-number: QTBUG-23586
Change-Id: Ifa891a017690a36bd5837bc6b4dd0e47eb515a46
Reviewed-by: Martin Jones <martin.jones@nokia.com>